# cc-switcher

./: README.md  index.html  package-lock.json  package.json  prompt.html  tailwind.config.js  vite.config.ts
scripts/: package-dmg.sh
src/: PromptApp.tsx  SettingsApp.tsx  index.css  main.ts  main.tsx  prompt.ts  prompt.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  commands.rs  cookies.rs  lib.rs  main.rs  store.rs  swap.rs
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  sonner.tsx  tabs.tsx
