[package]
name = "cc-switcher"
version = "0.1.0"
description = "Менеджер аккаунтов Claude Desktop в меню-баре macOS"
authors = ["codenol"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cc_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cookie-движок (#3): Chromium v10 safeStorage
rusqlite = { version = "0.32", features = ["bundled"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

